--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/bookStore"
+MongoDBURI="MongoDBURI="mongodb+srv://thespeedyqueeen:yogesh123@cluster0.dka53.mongodb.net/""
